--- a/static/global.css
+++ b/static/global.css
@@ -47,3 +47,15 @@ section > * + *,
 section > div > * + * {
   margin-top: 1em;
 }
+
+.button {
+  border: 0;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
