sticky footer with grid

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -60,3 +60,26 @@ section > div > * + * {
   margin: 0.25rem;
   cursor: pointer;
 }
+
+div#sapper {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas: "header" "main" "footer";
+  max-width: 56rem;
+  margin: 0 auto;
+}
+
+div#sapper > header {
+  grid-area: header;
+}
+
+div#sapper > main {
+  grid-area: main;
+  /* padding: 15px 5px 10px 5px; */
+}
+
+div#sapper > footer {
+  grid-area: footer;
+}
